--- a/templates/provincia/index.html.twig
+++ b/templates/provincia/index.html.twig
@@ -1,20 +1,16 @@
 {% extends 'base.html.twig' %}
 
-{% block title %}Hello {{ controller_name }}!{% endblock %}
 
 {% block body %}
-<style>
-    .example-wrapper { margin: 1em auto; max-width: 800px; width: 95%; font: 18px/1.5 sans-serif; }
-    .example-wrapper code { background: #F5F5F5; padding: 2px 6px; }
-</style>
 
-<div class="example-wrapper">
-    <h1>Hello {{ controller_name }}! ✅</h1>
+<h1>Listado de Provincia</h1>
+<ul>
+    {% for provincia in provincias %}
+        <li>{{ provincia.nombre }}</li>
+    {% endfor %}
+</ul>
 
-    This friendly message is coming from:
-    <ul>
-        <li>Your controller at <code><a href="{{ 'src/Controller/ProvinciaController.php'|file_link(0) }}">src/Controller/ProvinciaController.php</a></code></li>
-        <li>Your template at <code><a href="{{ 'templates/provincia/index.html.twig'|file_link(0) }}">templates/provincia/index.html.twig</a></code></li>
-    </ul>
-</div>
+<a href="{{ path('provincia_nuevo') }}">Añadir provincia</a>
+
 {% endblock %}
+
