--- a/templates/localidad/index.html.twig
+++ b/templates/localidad/index.html.twig
@@ -1,16 +1,20 @@
-{% extends 'base.html.twig' %}
 
+{% extends 'base.html.twig' %}
 
 {% block body %}
 
-<h1>Listado de Localidad</h1>
+<h1> Listado de Localidades </h1>
 <ul>
-    {% for localidad in localidades %}
-        <li>{{ localidad.nombre }} - {{ localidad.area }} - {{localidad.habitantes}} - {{localidad.cp}}</li>
-    {% endfor %}
+	{% for localidad in localidades %}
+	<li> 
+		{{ localidad.nombre }} - 
+		{{ localidad.area }} - 
+		{{ localidad.habitantes }} - 
+		{{ localidad.cp }} - 
+		{{ localidad.provincia.nombre }}
+	</li>
+	{% endfor %}
 </ul>
-
-<a href="{{ path('localidad_nuevo') }}">Añadir localidad</a>
+<a href="{{ path('localidad_nuevo') }}"> Añadir Localidad </a>
 
 {% endblock %}
-
