--- a/templates/presidente/index.html.twig
+++ b/templates/presidente/index.html.twig
@@ -1,16 +1,15 @@
 {% extends 'base.html.twig' %}
 
-
 {% block body %}
 
-<h1>Listado de presidentes</h1>
+<h1> Listado de Presidentes </h1>
 <ul>
-    {% for presidente in presidentes %}
-        <li>{{ presidente.nombre }} - {{ presidente.fechanac|date("d/m/Y") }} </li>
-    {% endfor %}
-</ul>
-
-<a href="{{ path('presidente_nuevo') }}">Añadir presidente</a>
+	{% for presidente in presidentes %}
+	<li> 
+		{{ presidente.nombre }} - 
+		{{ presidente.fechanac|date('Y-m-d') }}
+	</li>
+	{% endfor %}
+</ul><a href="{{ path('presidente_nuevo') }}"> Añadir Presidente </a>
 
 {% endblock %}
-
