--- a/templates/region/nuevo.html.twig
+++ b/templates/region/nuevo.html.twig
@@ -1,14 +1,10 @@
 {% extends 'base.html.twig' %}
 
-
 {% block body %}
 
-
-{{ form_start(formulario) }}
+{{ form_start(formulario, {'attr': {'novalidate': 'novalidate'}}) }}
 {{ form_widget(formulario) }}
 {{ form_end(formulario) }}
-
-
 
 
 {% endblock %}
